Added in information for adding holes to stoppers

--- a/UPA_InfoSheet.ipynb
+++ b/UPA_InfoSheet.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "UPA InfoSheet",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,22 +16,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AguaClara/Unit-Processes/blob/master/UPA_InfoSheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "RzC9azsrdtN5",
         "colab_type": "text"
       },
       "source": [
         "##**Pump Tubes**\n",
-        "[//]: <> (This is also a comment.)\n",
+        "[//]: <> (Information for possible pump head tubes to used for the apparatus)\n",
         "\n",
         "*  **Yellow/Blue**\n",
         "  *   **Inner Diameter:** 1.52mm  \n",
@@ -49,8 +38,31 @@
         "* **#14 MasterFlex Pump Tubing**\n",
         "* **#16 MasterFlex Pump Tubing**\n",
         "* **#17 MasterFlex Pump Tubing**\n",
-        "* **#18 MasterFlex Pump Tubing**\n"
+        "* **#18 MasterFlex Pump Tubing**\n",
+        "\n",
+        "\n",
+        "##**Apparatus Tools**\n",
+        "\n",
+        "\n",
+        "*   Holes on Stopper\n",
+        "  *   Use the Precision Drill drills with size 1,4 or 1,5\n",
+        "\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9FEvjFsG7h7e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
